[gd_scene load_steps=38 format=3 uid="uid://cg2ic02prkmom"]

[ext_resource type="Script" path="res://audio_controller.gd" id="1_d26gg"]
[ext_resource type="AudioStream" uid="uid://bgqdpe810iio7" path="res://Audio/Music/Songs/movingrightalong - Wolfgang_ - CC0.wav" id="2_pmtfi"]
[ext_resource type="AudioStream" uid="uid://dga7epahur0y5" path="res://Audio/Music/Songs/upbeatoverworld - Wolfgang_ - CC0.wav" id="2_skp13"]
[ext_resource type="AudioStream" uid="uid://cyav3fjkj6pj1" path="res://Audio/Music/Songs/8bit Bossa - Joth - CC0.mp3" id="3_lgnfq"]
[ext_resource type="AudioStream" uid="uid://bio6x4l5vcepu" path="res://Audio/Music/Songs/Bone Yard Waltz - Loopable - Wolfgang_ - CCBY.mp3" id="3_oqvvf"]
[ext_resource type="AudioStream" uid="uid://df88yt3snijl4" path="res://Audio/metal_impact-01.wav" id="4_52rjh"]
[ext_resource type="AudioStream" uid="uid://q2apatts0p42" path="res://Audio/Music/Songs/hauntedcastle - Wolfgang_ CC0.mp3" id="4_q4r7n"]
[ext_resource type="AudioStream" uid="uid://d3pe8e2jpqeyk" path="res://Audio/Music/Songs/desertbounce-trimmed - Wolfgang_ CC0.wav" id="5_v4hpg"]
[ext_resource type="AudioStream" uid="uid://dwym54xpj2dx1" path="res://Audio/metal_impact-06.wav" id="5_x63jl"]
[ext_resource type="AudioStream" uid="uid://c5t4md3ryx24s" path="res://Audio/Music/Songs/stronghold - Tausdei - CCBY.mp3" id="6_i3y7v"]
[ext_resource type="AudioStream" uid="uid://qtmqqsuee182" path="res://Audio/qubodup arrow1 - CC0.wav" id="6_j04jf"]
[ext_resource type="AudioStream" uid="uid://385jsy2gaafk" path="res://Audio/air_move - Almitory CC0.mp3" id="7_0ndjf"]
[ext_resource type="AudioStream" uid="uid://yn358o3ttmfv" path="res://Audio/Music/Songs/LavaLand - One Loop - Wolfgang_ CCBY.mp3" id="7_l8mhd"]
[ext_resource type="AudioStream" uid="uid://c32gf2ddkgfb1" path="res://Audio/Music/Songs/8BitCave - Wolfgang_ - CC0.wav" id="8_kosqm"]
[ext_resource type="AudioStream" uid="uid://c6v8k7e00jat6" path="res://Audio/thud2.mp3" id="8_p77w6"]
[ext_resource type="AudioStream" uid="uid://c6n1ms3sit52j" path="res://Audio/temp.mp3" id="9_5fthd"]
[ext_resource type="AudioStream" uid="uid://brbmmajr8bh50" path="res://Audio/Music/Songs/desolation - northivanastan CC0.mp3" id="10_jk8iv"]
[ext_resource type="AudioStream" uid="uid://csib3m0tjpoxy" path="res://Audio/Coin01 - wobbleboxx - CC0.mp3" id="10_vwekh"]
[ext_resource type="AudioStream" uid="uid://d4c1byojibeya" path="res://Audio/monster_sfx_pack_2 - Ogrebane - CC0/monster-7.wav" id="11_eh4hj"]
[ext_resource type="AudioStream" uid="uid://c2xuxwx2asyw3" path="res://Audio/Music/Ambiance/ratsrats_0 - HaelDB CC0.mp3" id="11_h0gup"]
[ext_resource type="AudioStream" uid="uid://bhf77dldorhki" path="res://Audio/monster_sfx_pack_2 - Ogrebane - CC0/monster-8.wav" id="12_06a27"]
[ext_resource type="AudioStream" uid="uid://w4osc3oswbqo" path="res://Audio/Music/Ambiance/forest - Brandon Morris - CC0.mp3" id="12_g6m08"]
[ext_resource type="AudioStream" uid="uid://cgd281gnft3hd" path="res://Audio/Music/Ambiance/IswearIsawit - yd - CC0.mp3" id="13_78c5i"]
[ext_resource type="AudioStream" uid="uid://c2ay7b2ld31bt" path="res://Audio/Music/Ambiance/gloom - SouljahdeShiva - CCBY.mp3" id="13_drm28"]
[ext_resource type="AudioStream" uid="uid://nk50qr11lilu" path="res://Audio/monster_sfx_pack_2 - Ogrebane - CC0/monster-9.wav" id="13_w3uvo"]
[ext_resource type="AudioStream" uid="uid://p4tie2oujjpq" path="res://Audio/Music/Ambiance/cannontube - Gundatsch - CCBY.mp3" id="14_3kaht"]
[ext_resource type="AudioStream" uid="uid://cax5wudj7t7k2" path="res://Audio/monster_sfx_pack_2 - Ogrebane - CC0/monster-10.wav" id="14_5jtu1"]
[ext_resource type="AudioStream" uid="uid://dwybjq05p6np2" path="res://Audio/Music/Ambiance/dungeon002 - yd - CC0.mp3" id="14_rvr00"]
[ext_resource type="AudioStream" uid="uid://kdw51pxsogiw" path="res://Audio/Music/Ambiance/Factory - yd - CC0.mp3" id="15_a7e04"]
[ext_resource type="AudioStream" uid="uid://blutds3xyoaf6" path="res://Audio/ooooh - Nocturnal_Vanguard - CC0.mp3" id="15_qnd8x"]
[ext_resource type="AudioStream" uid="uid://cf403p8gt4mk4" path="res://Audio/bones1.mp3" id="16_dse3t"]
[ext_resource type="AudioStream" uid="uid://gw7cmk2ehy3q" path="res://Audio/Music/Ambiance/Shifting Sands of Ma-Kali - Hitctrl - CCBY.mp3" id="16_ko33n"]
[ext_resource type="AudioStream" uid="uid://x5opxv1v7hw1" path="res://Audio/bones2.mp3" id="17_w8ly1"]
[ext_resource type="AudioStream" uid="uid://cmlivdm5e8ilr" path="res://Audio/clink3 - BMacZero - CC0.wav" id="34_ehmc3"]
[ext_resource type="AudioStream" uid="uid://cp4kltweaadkh" path="res://Audio/thud2 - BMacZero - CC0.wav" id="35_3bejm"]
[ext_resource type="AudioStream" uid="uid://n6jrb0lh5fff" path="res://Audio/thud3 - BMacZero - CC0.wav" id="36_514b8"]
[ext_resource type="AudioStream" uid="uid://cpn4lthrpjc26" path="res://Audio/Horror Hit - VividReality - CCBY.wav" id="37_xjlli"]

[node name="AudioController" type="Node"]
script = ExtResource("1_d26gg")

[node name="Music" type="Node" parent="."]

[node name="Songs" type="Node" parent="Music"]

[node name="IntroSong" type="AudioStreamPlayer" parent="Music/Songs"]
stream = ExtResource("2_skp13")
volume_db = -25.0
bus = &"Music"

[node name="StandardSong" type="AudioStreamPlayer" parent="Music/Songs"]
stream = ExtResource("3_lgnfq")
volume_db = -25.0
autoplay = true
bus = &"Music"

[node name="GoblinSong" type="AudioStreamPlayer" parent="Music/Songs"]
stream = ExtResource("2_pmtfi")
volume_db = -25.0
bus = &"Music"

[node name="SkeletonSong" type="AudioStreamPlayer" parent="Music/Songs"]
stream = ExtResource("3_oqvvf")
volume_db = -20.0
bus = &"Music"

[node name="CyclopsSong" type="AudioStreamPlayer" parent="Music/Songs"]
stream = ExtResource("6_i3y7v")
volume_db = -25.0
bus = &"Music"

[node name="SpiritSong" type="AudioStreamPlayer" parent="Music/Songs"]
stream = ExtResource("4_q4r7n")
volume_db = -20.0
bus = &"Music"

[node name="DesertSong" type="AudioStreamPlayer" parent="Music/Songs"]
stream = ExtResource("5_v4hpg")
volume_db = -15.0
bus = &"Music"

[node name="SpiderSong" type="AudioStreamPlayer" parent="Music/Songs"]
stream = ExtResource("7_l8mhd")
volume_db = -15.0
bus = &"Music"

[node name="RobotSong" type="AudioStreamPlayer" parent="Music/Songs"]
stream = ExtResource("8_kosqm")
volume_db = -15.0
bus = &"Music"

[node name="DevilSong" type="AudioStreamPlayer" parent="Music/Songs"]
stream = ExtResource("10_jk8iv")
volume_db = -15.0
bus = &"Music"

[node name="Ambiance" type="Node" parent="Music"]

[node name="GoblinAmbiance" type="AudioStreamPlayer" parent="Music/Ambiance"]
stream = ExtResource("12_g6m08")
volume_db = -25.0
bus = &"Ambiance"

[node name="SkeletonAmbiance" type="AudioStreamPlayer" parent="Music/Ambiance"]
stream = ExtResource("13_drm28")
volume_db = -25.0
bus = &"Ambiance"

[node name="CyclopsAmbiance" type="AudioStreamPlayer" parent="Music/Ambiance"]
stream = ExtResource("14_3kaht")
volume_db = -25.0
bus = &"Ambiance"

[node name="SpiritAmbiance" type="AudioStreamPlayer" parent="Music/Ambiance"]
stream = ExtResource("13_78c5i")
volume_db = -35.0
bus = &"Ambiance"

[node name="DesertAmbiance" type="AudioStreamPlayer" parent="Music/Ambiance"]
stream = ExtResource("16_ko33n")
volume_db = -30.0
bus = &"Ambiance"

[node name="SpiderAmbiance" type="AudioStreamPlayer" parent="Music/Ambiance"]
stream = ExtResource("14_rvr00")
volume_db = -20.0
bus = &"Ambiance"

[node name="RobotAmbiance" type="AudioStreamPlayer" parent="Music/Ambiance"]
stream = ExtResource("15_a7e04")
volume_db = -25.0
bus = &"Ambiance"

[node name="DevilAmbiance" type="AudioStreamPlayer" parent="Music/Ambiance"]
stream = ExtResource("11_h0gup")
volume_db = -25.0
bus = &"Ambiance"

[node name="SFX" type="Node" parent="."]

[node name="metal1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_52rjh")
volume_db = -30.0
pitch_scale = 1.18
max_polyphony = 2
bus = &"SFX"

[node name="metal2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_x63jl")
volume_db = -30.0
max_polyphony = 2
bus = &"SFX"

[node name="arrow1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_j04jf")
volume_db = -35.0
max_polyphony = 5
bus = &"SFX"

[node name="swing1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_0ndjf")
volume_db = -35.0
max_polyphony = 5
bus = &"SFX"

[node name="thud1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("8_p77w6")
volume_db = -35.0
pitch_scale = 0.51
max_polyphony = 5
bus = &"SFX"

[node name="thud2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("9_5fthd")
volume_db = -15.0
pitch_scale = 0.88
max_polyphony = 2
bus = &"SFX"

[node name="coin1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("10_vwekh")
volume_db = -15.0
max_polyphony = 5
bus = &"SFX"

[node name="monster1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("11_eh4hj")
volume_db = -35.0
pitch_scale = 1.56
max_polyphony = 5
bus = &"SFX"

[node name="monster2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("12_06a27")
volume_db = -35.0
pitch_scale = 1.56
max_polyphony = 5
bus = &"SFX"

[node name="monster3" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("13_w3uvo")
volume_db = -35.0
pitch_scale = 1.56
max_polyphony = 5
bus = &"SFX"

[node name="monster4" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("14_5jtu1")
volume_db = -35.0
pitch_scale = 1.56
max_polyphony = 5
bus = &"SFX"

[node name="ghost1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("15_qnd8x")
volume_db = -15.0
pitch_scale = 0.57
max_polyphony = 5
bus = &"SFX"

[node name="bones1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("16_dse3t")
volume_db = -15.0
pitch_scale = 2.19
max_polyphony = 5
bus = &"SFX"

[node name="bones2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("17_w8ly1")
volume_db = -15.0
max_polyphony = 5
bus = &"SFX"

[node name="bonk1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("34_ehmc3")
volume_db = -25.0
max_polyphony = 5
bus = &"SFX"

[node name="bonk2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("35_3bejm")
volume_db = -25.0
max_polyphony = 5
bus = &"SFX"

[node name="bonk3" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("36_514b8")
volume_db = -25.0
max_polyphony = 5
bus = &"SFX"

[node name="wave1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("37_xjlli")
volume_db = -25.0
max_polyphony = 5
bus = &"SFX"
